# zk-aluvm

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: fe.rs  lib.rs  zkstl.rs
src/core/: core.rs  microcode.rs  mod.rs
src/gfa/: bytecode.rs  exec.rs  instr.rs  masm.rs  mod.rs
src/isa/: masm.rs  mod.rs
tests/: exec.rs
